--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,13 +40,15 @@ optimize = """docker run --rm -v "$(pwd)":/code \
 """
 
 [dependencies]
-cosmwasm-std = { version = "0.16.2" }
-cosmwasm-storage = { version = "0.16.0" }
-cw-storage-plus = "0.8.0"
-cw2 = "0.8.1"
-schemars = "0.8.3"
-serde = { version = "1.0.127", default-features = false, features = ["derive"] }
-thiserror = { version = "1.0.26" }
+cosmwasm-std = "0.16.2"
+cosmwasm-storage = "0.16.2"
+cw-storage-plus = "0.9.1"
+cw0 = "0.9.1"
+cw2 = "0.9.1"
+cw721 = "0.9.2"
+schemars = "0.8.8"
+serde = { version = "1.0.130", default-features = false, features = ["derive"] }
+thiserror = "1.0.26"
 
 [dev-dependencies]
-cosmwasm-schema = { version = "0.16.0" }
+cosmwasm-schema = "0.16.2"
